Sun May  4 03:46:42 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.httpdate): Always return a UTC Time object.

Sun May  4 03:26:39 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.make_time): Refactored.

Sun May  4 02:53:17 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.rfc2822): Fix year completion.
	  Produce fixed-offset time object if appropriate.
	  (Time.xmlschema): Produce fixed-offset time object if appropriate.

Sat May  3 23:52:20 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (make_time): Produce fixed-offset time object if
	  appropriate.
	  (Time.strptime): Use d[:zone] instead of d[:offset].

	* lib/rss/rss.rb (Time.w3cdtf): Produce fixed-offset time object if
	  appropriate.

Sat May  3 20:21:38 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.strptime): Use d[:offset] if d[:seconds] is not
	  given.
	  Reported by tadayoshi funaba.  [ruby-core:62322]

Sat May  3 04:04:16 2014  Eric Wong  <e@80x24.org>

	* complex.c (parse_comp): replace ALLOCA_N with ALLOCV_N/ALLOCV_END
	  [Bug #9608]
	* rational.c (read_digits): ditto

Sat May  3 00:06:30 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* file.c (HAVE_STRUCT_STATVFS_F_BASETYPE): File::Statfs#fstypename
	  is supported on AIX, HP-UX, and Solaris, by using the value of
	  struct statvfs.f_basetype.

	* configure.in (HAVE_STRUCT_STATVFS_F_BASETYPE): check struct
	  statvfs.f_basetype which is available on AIX, HP-UX, and Solaris.

Fri May  2 21:04:02 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (next_id): no reason to set ID_STATIC_SYM here, as ID
	  returned by rb_intern3 can be a dynamic symbol and the static
	  symbol flag is set otherwise.  [Bug #9787]

Fri May  2 11:32:51 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_io.rb (test_seek, test_seek_symwhence): defer
	  File::Statfs#type call which may not be implemented, to mitigate
	  errors on platforms where SEEK_DATA is available but f_type in